Fix ucronía translations

--- a/Locales/locales.csv
+++ b/Locales/locales.csv
@@ -27,7 +27,7 @@ EP2,Gatear antes de caminar,Crawl before you walk,"Erst krabbeln, dann laufen"
 EP3,Independizándose,Independence,Unabhängigkeit
 EP4,Una ubre y sus consecuencias,An udder and her consequences,Ein Euter und seine Folgen
 EP5,Siempre fiel,Always faithful,Immer treu
-EP6,Ucronía,Ucronia,Ukronien
+EP6,Ucronía,Uchronia,Uchronie
 EP7,Sístole y Diástole,Systole and Diastole,Systole und Diastole
 EP8,Anfibios,Amphibious,Amphibisch
 EP9,R.U.B.E.N,R.U.B.E.N,R.U.B.E.N
