--- a/Locales/locales.csv
+++ b/Locales/locales.csv
@@ -1,6 +1,6 @@
 id,es,en,de
 PLAY_GAME,Jugar,Play,Starten
-SETTINGS,Ajustes,Settings,Einstellungen
+SETTINGS,Ajustes,Settings,Optionen
 ABOUT,Info,About,Über
 SWITCH_SCREEN_CONTROLS,Usar botones táctiles,Use onscreen controls,Touch-Steuerung anzeigen
 SWITCH_RETRO_EFFECT,Simular pantalla retro,Simulate retro TV,Röhrenfernseher simulieren
@@ -124,53 +124,53 @@ CHICKEN_ADVICE_10,Aléjate primo aléjate,Get out of this place,Verpiss dich von
 CHICKEN_ADVICE_11,Efectivamente,Indeed,Tatsächlich
 CHICKEN_ADVICE_12,Porque quiero que sepas que tú para mi eres un amigo pa siempre,I want you to know that for me you are a true friend forever,"Du musst wissen, wirst "
 CHICKEN_ADVICE_13,La gravedad no existe,The earth is flat,Die Erde ist eine Scheibe
-CHICKEN_ADVICE_14,La caida de la gran babilonia,Tim's your uncle,-
-CHICKEN_ADVICE_15,FUAAAA!!,Zzz…,-
+CHICKEN_ADVICE_14,La caida de la gran babilonia,Tim's your uncle,
+CHICKEN_ADVICE_15,FUAAAA!!,Zzz…,
 CHICKEN_ADVICE_16,Tú no me mandas,I don’t receive orders from you,Ich lass mir von dir nichts sagen
 CHICKEN_ADVICE_17,:C,:C,:C
 CHICKEN_ADVICE_18,No te pongas nervioso,Don’t get nervous,Nicht nervös werden
-CHICKEN_ADVICE_19,¿Dónde está la contaminacion que yo la vea?,"Will, will Will will Will Will’s will?",-
-CHICKEN_ADVICE_20,seh seh seh seh,yep yep yep,-
-CHICKEN_ADVICE_21,Tu crees que arcadio va a llevar el coche al para?,-,-
+CHICKEN_ADVICE_19,¿Dónde está la contaminacion que yo la vea?,"Will, will Will will Will Will’s will?",
+CHICKEN_ADVICE_20,seh seh seh seh,yep yep yep,
+CHICKEN_ADVICE_21,Tu crees que arcadio va a llevar el coche al para?,,
 CHICKEN_ADVICE_22,La psicología es útil,The psychology is useful,Die Psychologie ist nützlich
 CHICKEN_ADVICE_23,C++ > Java,C++ > Java,C++ > Java
 CHICKEN_ADVICE_24,GNU‘s Not Unix,GNU‘s Not Unix,GNU‘s Not Unix
-CHICKEN_ADVICE_25,Salchichas comodoro,Are you talkin‘ to me?,-
-CHICKEN_ADVICE_26,Ostia el workbook!,And I say HEEEEEEEYYYY Whats going on?,-
+CHICKEN_ADVICE_25,Salchichas comodoro,Are you talkin‘ to me?,
+CHICKEN_ADVICE_26,Ostia el workbook!,And I say HEEEEEEEYYYY Whats going on?,
 CHICKEN_ADVICE_27,Macarrones con tomatico ,ring ring ring ring ring ring ring BANANA PHONE!,Ich esse gerne Sauerkraut und tanze gerne Polka
 CHICKEN_ADVICE_28,Yo soy tu padre,I am your father,Ich bin dein Vater
 CHICKEN_ADVICE_29,No quiero hablar contigo,I don’t wanna talk to you,Ich will nicht mit dir reden
 CHICKEN_ADVICE_30,Déjame en paz,Let me alone,Lass mich in Frieden
 CHICKEN_ADVICE_31,...,…,…
 CHICKEN_ADVICE_32,La oronja verde o amanita phalloides es el hongo más venenoso del mundo,Amanita phalloides or death cap is the most poisonous fungi in the world,Der Grüne Knollenblätterpilz oder Grüne Gift-Wulstling ist der giftigste Pilz der Welt
-CHICKEN_ADVICE_33,Poesía eres tú,You are poetry,-
-CHICKEN_ADVICE_34,Illuminati confirmed,Illuminati confirmed,-
-CHICKEN_ADVICE_35,Soy dueño de la canaca,I have to go to Walmart,-
-CHICKEN_ADVICE_36,Yo soy un pollo cobarde,But will it blend?,-
-CHICKEN_ADVICE_37,"¡Macrocéfalo, anfitrión, Rocambole, ectoplasma, filoxera, caníbal!",Billions of blue blistering boiled and barbecued barnacles!,-
+CHICKEN_ADVICE_33,Poesía eres tú,You are poetry,
+CHICKEN_ADVICE_34,Illuminati confirmed,Illuminati confirmed,
+CHICKEN_ADVICE_35,Soy dueño de la canaca,I have to go to Walmart,
+CHICKEN_ADVICE_36,Yo soy un pollo cobarde,But will it blend?,
+CHICKEN_ADVICE_37,"¡Macrocéfalo, anfitrión, Rocambole, ectoplasma, filoxera, caníbal!",Billions of blue blistering boiled and barbecued barnacles!,
 CHICKEN_ADVICE_38,"Para pasar a binario solo debes dividir entre 2,  el resultado son los restos ordenados al revés","To change a number to binary you only have to divide it by 2, the result are the remainings in inverse order",
-CHICKEN_ADVICE_39,Si no estás conmigo eres mi enemigo,If you are not with me then you are my enemy,-
-CHICKEN_ADVICE_40,Mírame a los ojos cuando te hablo,Look at my eyes when i'm talking to you,-
-CHICKEN_ADVICE_41,¡Duro con ellos!,Go and get hard on them!,-
-CHICKEN_ADVICE_42,"Rambo está en la trinchera, tiene una herida de bala en la pierna",I can’t feel my legs!,-
-CHICKEN_ADVICE_43,Sosio aflójate un eurito ahí,Hey man give me a buck plz,-
-CHICKEN_ADVICE_44,"Mira no más, esta cara, este cuerpo. Tú jamás tendrás este cuerpo","Oh dear look at my pretty face, isn't it fabulous?",-
-CHICKEN_ADVICE_45,¡Mi pueblo se muere por falta de conocimiento!,Checkmate atheist!,-
-CHICKEN_ADVICE_46,"Y volé de él, y él voló allá por la arbolada",I believe I can flyyy,-
-CHICKEN_ADVICE_47,Yo soy un pirata y tu mente es el mar y la psicología es mi barco,I’m a pirate and your mind is the sea and the psichology is my boat,-
-CHICKEN_ADVICE_48,"Si recomiendas a la gente usar homeopatía, te sugiero amablemente que te vayas a hacer puñetas",If water has memory then homeopathy is full of shit,-
-CHICKEN_ADVICE_49,"Si estás en un bosque y gritas y nadie te oye, ¿Por qué sigo suspendiendo Álgebra?","If you are in a forest a shout and no one hears you, why I keep failing Algebra?",-
-CHICKEN_ADVICE_50,Deja de xorfirar anda,Stop xorfiring now,-
-CHICKEN_ADVICE_51,Para mí será un placer vencerte,For me it would be a pleasure to defeat you,-
-CHICKEN_ADVICE_52,No me toques que yo no te he tocao,Don’t touch me cause I didn't touched you!,-
-CHICKEN_ADVICE_53,"A que no adivinas quién fue primero, ¿Mi huevo o yo?","I bet you can answer this, which was first, my egg or me?",-
-CHICKEN_ADVICE_54,"¡Ay vida mía, soy taaan desdichada!",I am soo unfortunate!,-
-CHICKEN_ADVICE_55,Ay quién tuviera la dicha que tiene el gallo,What does the fox say?,-
-CHICKEN_ADVICE_56,"¡Tengo miedo, tengo miedo, tengo miego, tengo muchísimo miedo!",I’m so so so afraid!,-
-CHICKEN_ADVICE_57,"¿Y qué hago mi niño, me lo cargo al hombro?",Look at my horse my horse is amazing,-
+CHICKEN_ADVICE_39,Si no estás conmigo eres mi enemigo,If you are not with me then you are my enemy,
+CHICKEN_ADVICE_40,Mírame a los ojos cuando te hablo,Look at my eyes when i'm talking to you,
+CHICKEN_ADVICE_41,¡Duro con ellos!,Go and get hard on them!,
+CHICKEN_ADVICE_42,"Rambo está en la trinchera, tiene una herida de bala en la pierna",I can’t feel my legs!,
+CHICKEN_ADVICE_43,Sosio aflójate un eurito ahí,Hey man give me a buck plz,
+CHICKEN_ADVICE_44,"Mira no más, esta cara, este cuerpo. Tú jamás tendrás este cuerpo","Oh dear look at my pretty face, isn't it fabulous?",
+CHICKEN_ADVICE_45,¡Mi pueblo se muere por falta de conocimiento!,Checkmate atheist!,
+CHICKEN_ADVICE_46,"Y volé de él, y él voló allá por la arbolada",I believe I can flyyy,
+CHICKEN_ADVICE_47,Yo soy un pirata y tu mente es el mar y la psicología es mi barco,I’m a pirate and your mind is the sea and the psichology is my boat,
+CHICKEN_ADVICE_48,"Si recomiendas a la gente usar homeopatía, te sugiero amablemente que te vayas a hacer puñetas",If water has memory then homeopathy is full of shit,
+CHICKEN_ADVICE_49,"Si estás en un bosque y gritas y nadie te oye, ¿Por qué sigo suspendiendo Álgebra?","If you are in a forest a shout and no one hears you, why I keep failing Algebra?",
+CHICKEN_ADVICE_50,Deja de xorfirar anda,Stop xorfiring now,
+CHICKEN_ADVICE_51,Para mí será un placer vencerte,For me it would be a pleasure to defeat you,
+CHICKEN_ADVICE_52,No me toques que yo no te he tocao,Don’t touch me cause I didn't touched you!,
+CHICKEN_ADVICE_53,"A que no adivinas quién fue primero, ¿Mi huevo o yo?","I bet you can answer this, which was first, my egg or me?",
+CHICKEN_ADVICE_54,"¡Ay vida mía, soy taaan desdichada!",I am soo unfortunate!,
+CHICKEN_ADVICE_55,Ay quién tuviera la dicha que tiene el gallo,What does the fox say?,
+CHICKEN_ADVICE_56,"¡Tengo miedo, tengo miedo, tengo miego, tengo muchísimo miedo!",I’m so so so afraid!,
+CHICKEN_ADVICE_57,"¿Y qué hago mi niño, me lo cargo al hombro?",Look at my horse my horse is amazing,
 CHICKEN_ADVICE_58,Eres un mago Harry,You're a wizard harry,Du bist ein Zauberer Harry
 CHICKEN_ADVICE_59,Me hago pipí :/,I have to wee :/,Ich muss Pipi machen :/
-CHICKEN_ADVICE_60,Dime algo que no sepa ya,Tell me something I didn’t know,-
-CHICKEN_ADVICE_61,No puedo ni confirmar ni desmentir que yo sea un pollo,I can neither confirm nor deny I’m a chicken,-
-CHICKEN_ADVICE_62,Pienso luego existo,I think therefore I exist,-
-CHICKEN_ADVICE_63,Pos coman pinocha,Yolooo,-
+CHICKEN_ADVICE_60,Dime algo que no sepa ya,Tell me something I didn’t know,
+CHICKEN_ADVICE_61,No puedo ni confirmar ni desmentir que yo sea un pollo,I can neither confirm nor deny I’m a chicken,
+CHICKEN_ADVICE_62,Pienso luego existo,I think therefore I exist,
+CHICKEN_ADVICE_63,Pos coman pinocha,Yolooo,
