Fix hardcoded UFO Store text

--- a/Locales/locales.csv
+++ b/Locales/locales.csv
@@ -79,6 +79,7 @@ BTTN_RESET,Reiniciar,Reset,Zurücksetzen,
 BTTN_EXIT,Salir,Exit,Verlassen,
 BTTN_RESET_LEVEL,Reiniciar nivel,Reset level,Ebene zurücksetzen,
 BTTN_MAIN_MENU,Ir al menú principal,Go to main menu,Zum Hauptmenü,
+UFO_STORE,UFO Store,UFO Store,UFO Store,
 TUT_0,Este camino está bloqueado. Busca otra forma de desplazarte.,This way is blocked. Find another path.,Dieser weg ist versperrt. Finde einen anderen.,
 TUT_1,Utiliza las teclas de dirección para moverte,Use arrows buttons to move,Laufe mit den Pfeiltasten,
 TUT_2,Pulsa A o el botón del resorte para saltar por encima de estos bloques.,Press A or the space button to jump above these blocks,Drücke A oder die Leertaste um über diese Blöcke zu springen,
