Corrected too long string

--- a/Locales/locales.csv
+++ b/Locales/locales.csv
@@ -28,7 +28,7 @@ Creato con Godot Engine 2.1.5 (MIT)
 ",
 CHAPTERS,Capítulos,Chapters,Kapitel,Capitoli,
 EP1,La escuela,The school,Die Schule,La scuola,
-EP2,Gatear antes de caminar,Crawl before you walk,"Erst krabbeln, dann laufen",Prima di camminare impara a gattonare,
+EP2,Gatear antes de caminar,Crawl before you walk,"Erst krabbeln, dann laufen",Gattona prima di camminare,
 EP3,Independizándose,Independence,Unabhängigkeit,Indipendenza,
 EP4,Una ubre y sus consecuencias,An udder and her consequences,Ein Euter und seine Folgen,Una mammella e le sue conseguenze,
 EP5,Siempre fiel,Always faithful,Immer treu,Sempre fedele,
